correct_star_color_and_collapseArray_style

--- a/src/pages/ApartmentPage/components/Rate/Rate.module.scss
+++ b/src/pages/ApartmentPage/components/Rate/Rate.module.scss
@@ -14,7 +14,7 @@
 .starBasic {
   height: 30px;
   width: 30px;
-  color: var(--gray-1);
+  color: #e3e3e3;
   padding: 5px;
   @include mixin.xs {
     font-size: 15px;
